--- a/_includes/toc-date.html
+++ b/_includes/toc-date.html
@@ -1,6 +1,6 @@
 <div class="book-summary">
     <div id="book-search-input" role="search">
-        <input type="text" placeholder="Type to search" />
+        <input type="text" placeholder="搜索" />
     </div>
     <nav role="navigation">
         <ul class="summary">
